# codesentinel

./: Dockerfile  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: Dockerfile  app.py  environment.py  grader.py  scenarios.py
